tests/ui/consts/issue-90878.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-90878.rs:2:20
   |
LL |     |x: usize| [0; x];
   |      -             ^
   |      |
   |      this would need to be a `const`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
